
++++++++++++++++++++++++++++++++
++   VersionX 2.2.2-pl        ++
++   Released on 2019-08-22   ++
++++++++++++++++++++++++++++++++
- Hide users dropdown if user lacks view_user permission [#96]
- Show proper error message when trying to view a non-existent version [#106]
- Fix filtering on the element/resource view [#94]

++++++++++++++++++++++++++++++++
++   VersionX 2.2.1-pl        ++
++   Released on 2018-12-17   ++
++++++++++++++++++++++++++++++++
- Fix the dashboard widget causing an E_FATAL and not using the right links

++++++++++++++++++++++++++++++++
++   VersionX 2.2.0-pl        ++
++   Released on 2018-12-14   ++
++++++++++++++++++++++++++++++++
- #105 Update component to make use of namespace-based routing instead of modAction
- Refactor single index controller into separate controllers for each view
- Refactor flat file processors to class based processors
- Cleanup old processor files during installation
- Use MODx.loadPage instead of window.location for opening links to allow middle click in 2.7
- Cleanup of various legacy (VersionX.action, $versionx->getAction)
- Highlight values that have changed in bold green
- Make the "Compare to" dropdown bigger so you can see the full date/time
- Properties tabs that are not implemented have been removed instead of shown as disabled tab
- #86 Fix template not shown on resource fields
- Show a more visual diff (red/green) of content changes

++++++++++++++++++++++++++++++++
++   VersionX 2.1.3-pl        ++
++   Released on 2015-10-25   ++
++++++++++++++++++++++++++++++++
- #79/82 Fix undefined constant error

++++++++++++++++++++++++++++++++
++   VersionX 2.1.2-pl        ++
++   Released on 2015-05-16   ++
++++++++++++++++++++++++++++++++
- #78 Fix critical issue where you could not save a resource properly

++++++++++++++++++++++++++++++++
++   VersionX 2.1.1-pl        ++
++   Released on 2015-05-15   ++
++++++++++++++++++++++++++++++++
- #65 Make sure Versions tab shows up on snippets