@@ -83,6 +83,7 @@ VersionX.panel.Resources = function(config) {
             },{
                 items: [{
                     xtype: 'button',
+                    cls: 'primary-button',
                     handler: this.doFilter,
                     text: _('versionx.filter',{what: _('resources')})
                 }]
