@@ -69,6 +69,7 @@ VersionX.panel.Templates = function(config) {
             },{
                 items: [{
                     xtype: 'button',
+                    cls: 'primary-button',
                     handler: this.doFilter,
                     text: _('versionx.filter',{what: _('templates')})
                 }]
